Manifests and tests

--- a/Intersect (Core)/packages.config
+++ b/Intersect (Core)/packages.config
@@ -1,4 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
+
 <packages>
   <package id="Ceras" version="4.0.40" targetFramework="net461" />
   <package id="CommandLineParser" version="2.7.82" targetFramework="net461" />
