--- a/Intersect.Client/packages.config
+++ b/Intersect.Client/packages.config
@@ -1,10 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AscensionGameDev.Client.DesktopGL" version="3.8.0.1217-develop" targetFramework="net461" />
   <package id="AscensionGameDev.Lidgren.Network" version="1.7.2" targetFramework="net461" />
   <package id="Costura.Fody" version="3.3.3" targetFramework="net461" developmentDependency="true" />
   <package id="Fody" version="4.2.1" targetFramework="net461" developmentDependency="true" />
   <package id="JetBrains.Annotations" version="2018.3.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="3.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.NetCore.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="MonoGame.Content.Builder" version="3.7.0.9" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net45" />
