--- a/Intersect.Client/packages.config
+++ b/Intersect.Client/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AscensionGameDev.Client.DesktopGL" version="3.8.0.1217-develop" targetFramework="net461" />
   <package id="AscensionGameDev.Lidgren.Network" version="1.7.2" targetFramework="net461" />
