Interfaces, minor changes

--- a/Intersect.Client/packages.config
+++ b/Intersect.Client/packages.config
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AscensionGameDev.Client.DesktopGL" version="3.8.0.1217-develop" targetFramework="net461" />
   <package id="AscensionGameDev.Lidgren.Network" version="1.7.2" targetFramework="net461" />
+  <package id="CommandLineParser" version="2.7.82" targetFramework="net461" />
   <package id="Costura.Fody" version="3.3.3" targetFramework="net461" developmentDependency="true" />
   <package id="Fody" version="4.2.1" targetFramework="net461" developmentDependency="true" />
   <package id="JetBrains.Annotations" version="2018.3.0" targetFramework="net461" />
