--- a/Intersect.Client/Intersect.Client.csproj
+++ b/Intersect.Client/Intersect.Client.csproj
@@ -78,12 +78,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Core\Audio.cs" />
+    <Compile Include="Core\ClientCommandLineOptions.cs" />
     <Compile Include="Core\Controls\ControlEnum.cs" />
     <Compile Include="Core\Controls\ControlMap.cs" />
     <Compile Include="Core\Controls\Controls.cs" />
     <Compile Include="Core\Fade.cs" />
     <Compile Include="Core\Graphics.cs" />
+    <Compile Include="Core\IClientContext.cs" />
     <Compile Include="Core\Input.cs" />
+    <Compile Include="Core\IPlatformRunner.cs" />
     <Compile Include="Core\Main.cs" />
     <Compile Include="Core\Sounds\MapSound.cs" />
     <Compile Include="Core\Sounds\Sound.cs" />
@@ -105,6 +108,7 @@
     <Compile Include="General\Time.cs" />
     <Compile Include="General\Enums.cs" />
     <Compile Include="General\Globals.cs" />
+    <Compile Include="Interface\IMutableInterface.cs" />
     <Compile Include="Interface\Shared\Errors\ErrorWindow.cs" />
     <Compile Include="Items\Item.cs" />
     <Compile Include="Items\MapItem.cs" />
@@ -134,6 +138,8 @@
     <Compile Include="Interface\Menu\CreditsWindow.cs" />
     <Compile Include="Interface\Menu\ResetPasswordWindow.cs" />
     <Compile Include="Interface\Menu\ForgotPasswordWindow.cs" />
+    <Compile Include="Plugins\IClientPluginContext.cs" />
+    <Compile Include="Plugins\Interfaces\IClientLifecycleHelper.cs" />
     <Compile Include="Utilities\MathHelper.cs" />
     <Compile Include="MonoGame\Audio\MonoMusicInstance.cs" />
     <Compile Include="MonoGame\Audio\MonoMusicSource.cs" />
@@ -187,7 +193,6 @@
     <Compile Include="Interface\Menu\RegisterWindow.cs" />
     <Compile Include="Interface\Shared\OptionsWindow.cs" />
     <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Interface\Resolution.cs" />
     <Compile Include="MonoGame\IntersectGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Networking\NetworkStatus.cs" />
@@ -199,6 +204,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="CommandLine, Version=2.7.82.0, Culture=neutral, PublicKeyToken=5a870481e358d379, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.2.7.82\lib\net461\CommandLine.dll</HintPath>
+    </Reference>
     <Reference Include="Costura, Version=3.3.3.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
       <HintPath>..\packages\Costura.Fody.3.3.3\lib\net40\Costura.dll</HintPath>
     </Reference>
