--- a/Intersect (Core)/Intersect (Core).csproj
+++ b/Intersect (Core)/Intersect (Core).csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\Microsoft.CodeAnalysis.FxCopAnalyzers.3.0.0\build\Microsoft.CodeAnalysis.FxCopAnalyzers.props" Condition="Exists('..\packages\Microsoft.CodeAnalysis.FxCopAnalyzers.3.0.0\build\Microsoft.CodeAnalysis.FxCopAnalyzers.props')" />
   <Import Project="..\packages\Microsoft.NetFramework.Analyzers.3.0.0\build\Microsoft.NetFramework.Analyzers.props" Condition="Exists('..\packages\Microsoft.NetFramework.Analyzers.3.0.0\build\Microsoft.NetFramework.Analyzers.props')" />
@@ -214,7 +214,9 @@
     <Compile Include="Config\PacketOptions.cs" />
     <Compile Include="Config\PartyOptions.cs" />
     <Compile Include="Config\SecurityOptions.cs" />
-    <Compile Include="Core\ApplicationContext.cs" />
+    <Compile Include="Core\ApplicationContext`2.cs" />
+    <Compile Include="Core\ApplicationService`2.cs" />
+    <Compile Include="Core\ApplicationService`3.cs" />
     <Compile Include="Core\ExperimentalFeatures\CommonExperiments.Core.cs" />
     <Compile Include="Core\ExperimentalFeatures\CommonExperiments.Static.cs" />
     <Compile Include="Core\ExperimentalFeatures\ExperimentalFlag.cs" />
@@ -230,7 +232,6 @@
     <Compile Include="Collections\DatabaseObjectLookup.cs" />
     <Compile Include="Collections\IGameObjectLookup.cs" />
     <Compile Include="Collections\ILookup.cs" />
-    <Compile Include="Collections\ReadOnlyDictionary.cs" />
     <Compile Include="Configuration\ClientConfiguration.cs" />
     <Compile Include="Config\CombatOptions.cs" />
     <Compile Include="Config\DatabaseOptions.cs" />
@@ -248,6 +249,8 @@
     <Compile Include="Core\IApplicationService.cs" />
     <Compile Include="Core\ICommandLineOptions.cs" />
     <Compile Include="Core\IThreadableApplicationService.cs" />
+    <Compile Include="Core\ServiceLifecycleStage.cs" />
+    <Compile Include="Core\ServiceLifecycleFailureException.cs" />
     <Compile Include="CustomColors.cs" />
     <Compile Include="Enums\ItemHandling.cs" />
     <Compile Include="ErrorHandling\ExceptionInfo.cs" />
@@ -499,6 +502,12 @@
     <Compile Include="Network\Packets\Server\TradeRequestPacket.cs" />
     <Compile Include="Network\Packets\Server\TradeUpdatePacket.cs" />
     <Compile Include="Network\Packets\SlotSwapPacket.cs" />
+    <Compile Include="Plugins\Helpers\CommandLineHelper.cs" />
+    <Compile Include="Plugins\Helpers\ContextHelper.cs" />
+    <Compile Include="Plugins\Helpers\EmbeddedResourceHelper.cs" />
+    <Compile Include="Plugins\Helpers\LoggingHelper.cs" />
+    <Compile Include="Plugins\Contexts\PluginBootstrapContext.cs" />
+    <Compile Include="Plugins\Contexts\PluginContext.cs" />
     <Compile Include="Plugins\Interfaces\ICommandLineHelper.cs" />
     <Compile Include="Plugins\Interfaces\IEmbeddedResourceHelper.cs" />
     <Compile Include="Plugins\Interfaces\ILifecycleHelper.cs" />
@@ -513,9 +522,20 @@
     <Compile Include="Plugins\IPluginEntry.cs" />
     <Compile Include="Plugins\IPluginService.cs" />
     <Compile Include="Plugins\Loaders\ManifestLoader.cs" />
+    <Compile Include="Plugins\Loaders\PluginLoader.Configuration.cs" />
+    <Compile Include="Plugins\Loaders\PluginLoader.Discovery.cs" />
     <Compile Include="Plugins\Manifests\JsonManifest.cs" />
     <Compile Include="Plugins\Manifests\Types\Author.cs" />
+    <Compile Include="Plugins\Loaders\PluginLoader.Assembly.cs" />
     <Compile Include="Plugins\Manifests\Types\Authors.cs" />
+    <Compile Include="Plugins\PluginConfiguration.cs" />
+    <Compile Include="Plugins\Plugin.cs" />
+    <Compile Include="Plugins\Plugin.PluginReference.cs" />
+    <Compile Include="Plugins\PluginEntry.cs" />
+    <Compile Include="Plugins\PluginEntry`1.cs" />
+    <Compile Include="Plugins\PluginHelper.cs" />
+    <Compile Include="Plugins\PluginInstance.cs" />
+    <Compile Include="Plugins\PluginService.cs" />
     <Compile Include="Properties\DeveloperStrings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
