Additional cleanup and documentation

--- a/Intersect.Editor/packages.config
+++ b/Intersect.Editor/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.CodeQuality.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.NetCore.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.NetFramework.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.5.31" targetFramework="net461" />
   <package id="Mono.Data.Sqlite.Portable" version="1.0.3.5" targetFramework="net45" />
   <package id="MonoGame.Content.Builder" version="3.7.0.9" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.7.1.189" targetFramework="net461" />
