--- a/Intersect (Core)/packages.config
+++ b/Intersect (Core)/packages.config
@@ -23,6 +23,7 @@
   <package id="Microsoft.Extensions.Primitives" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.NetCore.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.NetFramework.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.5.31" targetFramework="net461" />
   <package id="ncalc" version="1.3.8" targetFramework="net35" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="Semver" version="2.0.6" targetFramework="net461" />
