--- a/Intersect.Client/packages.config
+++ b/Intersect.Client/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.CodeQuality.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.NetCore.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.NetFramework.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.5.31" targetFramework="net461" />
   <package id="MonoGame.Content.Builder" version="3.7.0.9" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net45" />
