--- a/Intersect.Network/packages.config
+++ b/Intersect.Network/packages.config
@@ -7,5 +7,6 @@
   <package id="Microsoft.CodeQuality.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.NetCore.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.NetFramework.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.5.31" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net45" />
 </packages>
