--- a/Intersect.Server/packages.config
+++ b/Intersect.Server/packages.config
@@ -50,6 +50,7 @@
   <package id="Microsoft.Owin.Hosting" version="4.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="4.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.5.31" targetFramework="net461" />
   <package id="Mono.Data.Sqlite.Portable" version="1.0.3.5" targetFramework="net461" />
   <package id="MySqlConnector" version="0.45.1" targetFramework="net461" />
   <package id="ncalc" version="1.3.8" targetFramework="net461" />
